@startuml

title __MYTRAVEL.APP's Class Diagram__\n

  namespace com.example.mytravel {
    class com.example.mytravel.AddPost {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.BuildConfig {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.FirebaseMethods {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.Login {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.MainActivity {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.MainApp {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.MusicService {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.OfflineActivity {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.OfflineBroadcastReceiver {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.Post {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.ResetPassword {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.SettingsActivity {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.ShowUser {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.SignUp {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.User {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.Utils {
    }
  }
  

  namespace com.example.mytravel {
    class com.example.mytravel.showPost {
    }
  }
  

  com.example.mytravel.AddPost -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.AddPost o-- com.example.mytravel.Post : post
  com.example.mytravel.AddPost o-- com.example.mytravel.User : user
  com.example.mytravel.Login -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.MainApp .up.|> com.google.android.gms.maps.GoogleMap.OnMapClickListener
  com.example.mytravel.MainApp .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.mytravel.MainApp .up.|> com.google.android.libraries.places.widget.listener.PlaceSelectionListener
  com.example.mytravel.MainApp -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.MainApp o-- com.example.mytravel.Post : currPost
  com.example.mytravel.MainApp o-- com.example.mytravel.User : user
  com.example.mytravel.MusicService -up-|> android.app.Service
  com.example.mytravel.OfflineActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.OfflineBroadcastReceiver -up-|> android.content.BroadcastReceiver
  com.example.mytravel.Post .up.|> android.os.Parcelable
  com.example.mytravel.Post .up.|> com.google.maps.android.clustering.ClusterItem
  com.example.mytravel.Post o-- com.example.mytravel.User : owner
  com.example.mytravel.ResetPassword -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.SettingsActivity .up.|> android.widget.CompoundButton.OnCheckedChangeListener
  com.example.mytravel.SettingsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.ShowUser -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.ShowUser o-- com.example.mytravel.User : currUser
  com.example.mytravel.ShowUser o-- com.example.mytravel.User : inputUser
  com.example.mytravel.SignUp -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.User .up.|> android.os.Parcelable
  com.example.mytravel.showPost -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mytravel.showPost o-- com.example.mytravel.User : currUser
  com.example.mytravel.showPost o-- com.example.mytravel.Post : post


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
